# adcg_wrapper

./: ADCGWrapperConfig.cmake.in  CMakeLists.txt
example/: CMakeLists.txt
example/autodiff/: function.example.cpp
include/adcg_wrapper/: assert.hpp  data_types.hpp
include/adcg_wrapper/autodiff/: data_types.hpp  function.hpp  vector_composer.hpp
include/adcg_wrapper/autodiff/support/: quaternion.hpp
include/adcg_wrapper/io/: logging.hpp
include/adcg_wrapper/utils/: passkey.hpp  utils.hpp
test/: CMakeLists.txt
test/autodiff/: function.test.cpp
